# streamlit-portfolio

./: Home.py  README.md  config.py  hello.py  pyproject.toml  requirements.txt  update_env.py
.streamlit/: config.toml
assets/css/: style.css
assets/css/pages/: about.css  common.css  home.css  projects.css
components/: __init__.py  call_to_action.py  contact_form.py  footer.py  github_repo_card.py  hero_section.py  navbar.py  page_header.py  profile_card.py  project_card.py  skill_card.py  social_links.py  theme_setup.py  timeline.py
data/: __init__.py  projects.json
flows/: __init__.py  config.py  data_flows.py  etl_flows.py  ml_flows.py  utils.py  visualization_flows.py
pages/: About.py  Contact.py  Projects.py  __init__.py
tests/: __init__.py  test_utils.py
unused/: About.py
utils/: __init__.py  data_utils.py  display_utils.py  github_utils.py
