[project]
name = "streamlit-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Streamlit and UI
    "streamlit>=1.42.2",
    "streamlit-shadcn-ui>=0.1.18",
    "streamlit-antd-components>=0.1.18",
    
    # Data Processing and Visualization
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "plotly>=6.0.0",
    "matplotlib>=3.10.1",
    "altair>=5.5.0",
    "seaborn>=0.12.0",
    
    # Machine Learning
    "scikit-learn>=1.6.1",
    "joblib>=1.4.2",
    
    # Workflow Management
    "prefect>=3.2.8",
    "prefect-sqlalchemy>=0.5.2",
    
    # Database and API
    "sqlalchemy>=2.0.38",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    
    # Utilities
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

# Optional dependencies - commented out as they're not directly used
# "streamlit-lottie>=0.0.5",
# "streamlit-option-menu>=0.4.0",
# "streamlit-extras>=0.5.5",
# "pillow>=11.1.0",
